# SquareDevices

./: .gitignore  LICENSE  README.md
DesktopTools/: README.md
DesktopTools/dotNET/: README.md
DesktopTools/macOS/: DesktopTool.plist
DesktopTools/macOSApp/: VendorTool.plist
Firmwares/fido2_lib/: fido_ble_receive.c  fido_ble_receive.h  fido_ble_send.c  fido_ble_send.h  fido_command.c  fido_command.h  fido_define.h  fido_transport_define.h
Firmwares/fw_common/: fw_common.c  fw_common.h
nRF5340FW/square_devices_app/: CMakeLists.txt  Kconfig  overlay-opt.conf  overlay-smp.conf  prj.conf  westbuild.sh
nRF5340FW/square_devices_app/app/: app_batt_adc.c  app_batt_adc.h  app_ble_advertise.c  app_ble_advertise.h  app_ble_bas.c  app_ble_bas.h  app_ble_connection.c  app_ble_connection.h  app_ble_fido.c  app_ble_fido.h  app_ble_fido_define.h  app_ble_init.c  app_ble_init.h  app_ble_nus.c  app_ble_nus.h  app_ble_pairing.c  app_ble_pairing.h  app_ble_unpairing.c  app_ble_unpairing.h  app_ble_unpairing_define.h  app_board.c  app_board.h  app_channel.c  app_channel.h  app_crypto.c  app_crypto.h  app_crypto_define.h  app_crypto_ec.c  app_crypto_ec.h  app_crypto_rsa.c  app_crypto_rsa.h  app_crypto_util.c  app_crypto_util.h  app_event.c  app_event.h  app_event_define.h  app_flash.c  app_flash.h  app_flash_general_status.c  app_flash_general_status.h  (+27 more)
nRF5340FW/square_devices_app/boards/: nrf5340dk_nrf5340_cpuapp.conf  raytac_mdbt53v_db_40_nrf5340_cpuapp.conf
nRF5340FW/square_devices_app/child_image/: mcuboot.conf
nRF5340FW/square_devices_app/configuration/nrf5340dk_nrf5340_cpuapp/: PCA10095_01.conf  adc.overlay  peripherals.overlay  tiny_tft.overlay
nRF5340FW/square_devices_app/configuration/raytac_mdbt53v_db_40_nrf5340_cpuapp/: peripherals.overlay  tiny_tft.overlay
nRF5340FW/square_devices_app/src/: main.c
nRF5340FW/square_devices_app/wrapper/: wrapper_main.c  wrapper_tiny_tft.c  wrappper_common.c
(+363 files in other folders)
